--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -43,7 +43,7 @@
                                 <div class="container-md">
                                     <li>
                                         Fútbol -
-                                        <a href="/paginas/equipo" class="link link-success" type="link">FC Barca</a>
+                                        <a href="/paginas/equipo" class="link link-success" type="link">Equipo1</a>
                                     </li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li>
