--- a/src/views/paginas/deporte.hbs
+++ b/src/views/paginas/deporte.hbs
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container" >
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="/img/futbol.jpg" alt="futbol">
+      <div class="carousel-item active" style="background: rgb(32, 155, 16);">
+        <!--<img class="rounded mx-auto d-block" src="/img/pelotaF.png" alt="futbol">-->
         <div class="carousel-caption text-start">
           <h1>FÚTBOL</h1>
           <p id="citaAutor">"El fútbol se juega con la cabeza, los pies son solo tu herramienta."</p>
@@ -11,20 +11,20 @@
         </div>
       </div>
 
-      <div class="carousel-item">
-        <img class="d-block w-100" src="/img/basquet.jpg" alt="basquet">
+      <div class="carousel-item" style="background: rgb(199, 135, 16);">
+        <!--<img class="rounded mx-auto d-block" src="/img/pelotaB.png" alt="basquet">-->
         <div class="carousel-caption text-start">
-          <h1>BASQUET</h1>
+          <h1>BÁSQUET</h1>
           <p id="citaAutor">"El talento gana partidos, pero el trabajo en equipo y la inteligencia ganan campeonatos."</p>
           <p>Michael Jordans</p>
           <p><a class="btn btn-lg btn-danger d-grid gap-2 col-6 mx-auto" href="./basquet">Ingresar</a></p>
         </div>
       </div>
       
-      <div class="carousel-item">
-        <img class="d-block w-100" src="/img/padel.jpg" alt="padel">
+      <div class="carousel-item" style="background: rgb(28, 138, 202);">
+        <!--<img class="rounded mx-auto d-block" src="/img/pelotaP.png" alt="padel">-->
         <div class="carousel-caption text-start">
-          <h1>PADEL</h1>
+          <h1>PÁDEL</h1>
           <p id="citaAutor">"No importa cómo te llegue la bola, siempre mirala con muchas ganas."</p>
           <p>Fernando Belasteguin</p>
           <p><a class="btn btn-lg btn-primary d-grid gap-2 col-6 mx-auto" href="./padel">Ingresar</a></p>
