--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -125,7 +125,16 @@ h6 {
   background: rgba(44, 44, 44, 0.925);
   color: rgb(255, 255, 255);
 }
-
+#offcanvasRightLabel{
+  color:rgb(250, 250, 250)
+}
+.nav-link{
+  color:rgb(250, 250, 250);
+  font-size: 20px
+}
+#nombrEmailBarra{
+  list-style:none;
+}
 #barraDesplegable {
   background: rgb(192, 192, 192);
 }
