--- a/src/views/partials/barrAdmin.hbs
+++ b/src/views/partials/barrAdmin.hbs
@@ -1,4 +1,4 @@
-{{#if admin}}
+{{#if user.rol}}
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">APPasionados</a>
