baje el brillo a la imagen de inicio

--- a/src/views/paginas/deporte.hbs
+++ b/src/views/paginas/deporte.hbs
@@ -2,7 +2,7 @@
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" style="background: rgb(32, 155, 16);">
-        <img class="d-block w-100" src="/img/futbol.jpg" alt="futbol">
+        <img class="d-block w-100" src="/img/futbol..jpg" alt="futbol">
         <div class="carousel-caption text-start">
           <h1>FÚTBOL</h1>
           <p id="citaAutor">"El fútbol se juega con la cabeza, los pies son solo tu herramienta."</p>
