--- a/src/views/paginas/inicio.hbs
+++ b/src/views/paginas/inicio.hbs
@@ -14,7 +14,7 @@
         </div>
     </div>
     <div id="linkCentro" class="col-md mx-auto">
-        <b>Ingresar como <a href="ingresoAdmin"  type="link" class="link link-primary link-lg">Administrador</a></b>
+        <b>Ingresar como... <a href="paginas/vistaAdmin"  type="link" class="link link-primary link-lg">Administrador</a></b>
         <h6>© 2021 APPasionados</h6>
     </div>
 </div>
