--- a/src/views/paginas/crearEquipo.hbs
+++ b/src/views/paginas/crearEquipo.hbs
@@ -1,7 +1,7 @@
 <div class="container" id="formulario">
     <form id="formequipo" >
-        <div class="row ">
-            <div class="col-md-6 m-auto bg-warning">
+        <div class="row m-3">
+            <div class="col-6 py-3 mx-3 m-auto bg-warning">
                 <div class="input-group mb-3">
                 <input type="text" class="form-control" name="Nombre" placeholder="nombre">
                 </div>
