formulario crear equipo futbol

--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -117,7 +117,7 @@
         </div>
         {{else}}
         <div class="col-6 my-5">
-           <h3><a class="text-white" href="crearEquipo">Crea tu Equipo!</a></h3> 
+           <h3><a class="text-white" href="crearEquipoFutbol">Crea tu Equipo!</a></h3> 
         </div>
         {{/if}}
     </div>
