--- a/src/views/paginas/crearEquipoFutbol.hbs
+++ b/src/views/paginas/crearEquipoFutbol.hbs
@@ -1,23 +1,23 @@
 <div class="container" id="formulario">
     <form id="formequipo" >
-        <div class="row ">
-             <h1 class="text-white m-3 text-center" >CREA TU EQUIPO</h1>
-            <div class="col-md-6 m-auto bg-warning">
+        <div class="row">
+             <h1 class="text-white mt-3 text-center" >CREA TU EQUIPO</h1>
+            <div class="col-6 m-auto py-3 bg-warning">
                 <div class="input-group mb-3 text-white">NOMBRE EQUIPO:
-                <input type="text" class="form-control" name="nombreEquipo" placeholder="nombre">
+                <input type="text" class="form-control" name="nombreEquipo" placeholder="Nombre de tu equipo">
                 </div>
                 <div class="input-group mb-3">
-                    <label for="tipo" class="text-white m-3" >TIPO</label>
+                    <label for="tipo" class="text-white m-3" >SELECCIONA TIPO</label>
                     <select name="tipo" class="btn btn-ls btn-info ">
-                        <option value="">FUTBOL 7</option>
-                        <option value="">FUTBOL 5</option>
-                        <option value="">FUTBOL 11</option>
+                        <option value="1">FUTBOL 5</option>
+                        <option value="2">FUTBOL 7</option>
+                        <option value="3">FUTBOL 11</option>
                     </select>                      
                 </div>  
             </div> 
         </div> 
     </form>
-    <button type="submit" onclick="location.href=" class="btn btn-success ">
-      crear equipo 
+    <button type="submit" href="" class="btn btn-success">
+      Crear Equipo 
     </button>
 </div>
