--- a/src/views/paginas/crearEquipoFutbol.hbs
+++ b/src/views/paginas/crearEquipoFutbol.hbs
@@ -1,23 +1,28 @@
 <div class="container" id="formulario">
     <form id="formequipo" method="POST" action="crearEquipoFutbol" >
         <div class="row">
-             <h1 class="text-white mt-3 text-center" >CREA TU EQUIPO</h1>
-            <div class="col-6 m-auto py-3 bg-warning">
-                <div class="input-group mb-3 text-white">NOMBRE EQUIPO:
-                <input type="text" class="form-control" name="nombreEquipo" placeholder="Nombre de tu equipo">
+             <h1 class="text-white mt-3 text-center py-4" >CREA TU EQUIPO</h1>
+            <div class="col-6 m-auto py-3 px-4 bg-white">
+                <div class="input-group mb-3">
+                    <label for="nombre" class="text-black m-2" ><b>NOMBRE DE TU EQUIPO:</b></label>
+                    <input type="text" class="form-control" name="nombreEquipo">
                 </div>
                 <div class="input-group mb-3">
-                    <label for="tipo" class="text-white m-3" >SELECCIONA TIPO</label>
-                    <select name="tipo" class="btn btn-ls btn-info ">
-                        <option value="">FUTBOL 5</option>
-                        <option value="">FUTBOL 7</option>
-                        <option value="">FUTBOL 11</option>
+                    <label for="tipo" class="text-black m-3" ><b>SELECCIONA TIPO</b></label>
+                    <select name="tipo" class="btn btn-ls btn-success">
+                        <option value="1">FUTBOL 5</option>
+                        <option value="2">FUTBOL 7</option>
+                        <option value="3">FUTBOL 11</option>
                     </select>                      
                 </div>  
             </div> 
         </div>
-        <button type="submit" onclick="location.href=" class="btn btn-success">
-            crear equipo 
-        </button> 
+        <div class="row">
+            <div class="col-4 m-auto py-4">
+                <button type="submit" class="btn btn-success btn-block">
+                    Crear Equipo 
+                </button>
+            </div>
+        </div> 
     </form>
 </div>
