--- a/src/views/paginas/crearEquipoFutbol.hbs
+++ b/src/views/paginas/crearEquipoFutbol.hbs
@@ -7,6 +7,10 @@
                     <label for="nombre" class="text-black m-2" ><b>NOMBRE DE TU EQUIPO:</b></label>
                     <input type="text" class="form-control" name="nombreEquipo">
                 </div>
+                 <div class="input-group mb-3">
+                    <label for="nombre" class="text-black m-2" ><b>POSICIÓN:</b></label>
+                    <input type="text" class="form-control" name="posicion">
+                </div>
                 <div class="input-group mb-3">
                     <label for="tipo" class="text-black m-3" ><b>SELECCIONA TIPO</b></label>
                     <select name="tipo" class="btn btn-ls btn-success">
