arreglo formulario de crear equipo

--- a/src/views/paginas/crearEquipoFutbol.hbs
+++ b/src/views/paginas/crearEquipoFutbol.hbs
@@ -8,15 +8,22 @@
                     <input type="text" class="form-control" name="nombreEquipo">
                 </div>
                  <div class="input-group mb-3">
-                    <label for="nombre" class="text-black m-2" ><b>POSICIÓN:</b></label>
-                    <input type="text" class="form-control" name="posicion">
+                    <label for="nombre" class="text-black m-2 " ><b> ELEGIR POSICIÓN:</b></label>
+                    <select name="posicion" class="btn btn-ls btn-success">
+                            <option type="text" value="">opciones</option>
+                            <option type="text" value="Arquero">Arquero</option>
+                            <option type="text" value="Defensor">Defensor</option>
+                            <option type="text" value="MedioCampo">Medio campo</option>
+                            <option type="text" value="Delantero">Delantero</option>
+                        </select>  
                 </div>
                 <div class="input-group mb-3">
                     <label for="idDeportes" class="text-black m-3" ><b>SELECCIONA TIPO</b></label>
                     <select name="idDeportes" class="btn btn-ls btn-success">
-                        <option type="number" value="1">FUTBOL 5</option>
-                        <option type="number" value="2">FUTBOL 7</option>
-                        <option type="number" value="3">FUTBOL 11</option>
+                          <option type="" value="">opciones</option>
+                        <option type="number" value="1">Futbol 5</option>
+                        <option type="number" value="2">Futbol 7</option>
+                        <option type="number" value="3">Futbol 11</option>
                     </select>                      
                 </div>  
             </div> 
