vida a la pagina de futbol

--- a/src/views/paginas/deporte.hbs
+++ b/src/views/paginas/deporte.hbs
@@ -7,7 +7,7 @@
           <h1>FÚTBOL</h1>
           <p id="citaAutor">"El fútbol se juega con la cabeza, los pies son solo tu herramienta."</p>
           <p>Andrea Pirlo</p>
-          <p><a class="btn btn-lg btn-success d-grid gap-2 col-6 mx-auto" href="./futbol">Ingresar</a></p>
+          <p><a class="btn btn-lg btn-success d-grid gap-2 col-6 mx-auto" href="./futbol/{{user.idUsuarios}}">Ingresar</a></p>
         </div>
       </div>
 
