--- a/src/views/paginas/crearEquipoFutbol.hbs
+++ b/src/views/paginas/crearEquipoFutbol.hbs
@@ -1,39 +1,46 @@
 <div class="container" id="formulario">
-    <form id="formequipo" method="POST" action="/paginas/crearEquipoFutbol/{{user.idUsuarios}}" >
+    <form id="formequipo" method="POST" action="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">
         <div class="row">
-             <h1 class="text-white mt-3 text-center py-4" >CREA TU EQUIPO</h1>
+            <h1 class="text-white mt-3 text-center py-4">CREA TU EQUIPO</h1>
             <div class="col-6 m-auto py-3 px-4 bg-white">
                 <div class="input-group mb-3">
-                    <label for="nombre" class="text-black m-2" ><b>NOMBRE DE TU EQUIPO:</b></label>
-                    <input type="text" class="form-control" name="nombreEquipo">
-                </div>
-                 <div class="input-group mb-3">
-                    <label for="nombre" class="text-black m-2 " ><b> ELEGIR POSICIÓN:</b></label>
-                    <select name="posicion" class="btn btn-ls btn-success">
-                            <option type="text" value="">opciones</option>
-                            <option type="text" value="Arquero">Arquero</option>
-                            <option type="text" value="Defensor">Defensor</option>
-                            <option type="text" value="MedioCampo">Medio campo</option>
-                            <option type="text" value="Delantero">Delantero</option>
-                        </select>  
+                    <label for="nombre" class="text-black m-2"><b>NOMBRE DE TU EQUIPO:</b></label>
+                    <input type="text" class="form-control" name="nombreEquipo" required>
                 </div>
                 <div class="input-group mb-3">
-                    <label for="idDeportes" class="text-black m-3" ><b>SELECCIONA TIPO</b></label>
-                    <select name="idDeportes" class="btn btn-ls btn-success">
-                          <option type="" value="">opciones</option>
+                    <label for="nombre" class="text-black m-2 "><b> ELEGIR POSICIÓN:</b></label>
+                    <select name="posicion" class="btn btn-ls btn-success" required>
+                        <option type="text" value="">Opciones</option>
+                        <option type="text" value="Arquero">Arquero</option>
+                        <option type="text" value="Defensor">Defensor</option>
+                        <option type="text" value="MedioCampo">Medio campo</option>
+                        <option type="text" value="Delantero">Delantero</option>
+                    </select>
+                </div>
+                <div class="input-group mb-3">
+                    <label for="idDeportes" class="text-black m-3"><b>SELECCIONA TIPO</b></label>
+                    <select name="idDeportes" class="btn btn-ls btn-success" required>
+                        <option type="" value="">Opciones</option>
                         <option type="number" value="1">Futbol 5</option>
                         <option type="number" value="2">Futbol 7</option>
                         <option type="number" value="3">Futbol 11</option>
-                    </select>                      
-                </div>  
-            </div> 
+                    </select>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-4 m-auto py-4">
                 <button type="submit" class="btn btn-success btn-block">
-                    Crear Equipo 
+                    Crear Equipo
                 </button>
             </div>
-        </div> 
+        </div>
     </form>
+    <div class="row">
+        <div class="col-4 m-auto">
+            <button onclick="location.href='/paginas/futbol/{{user.idUsuarios}}'" class="btn btn-danger btn-block">
+                Cancelar
+            </button>
+        </div>
+    </div>
 </div>
