agreue tablasde equipo

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -61,8 +61,7 @@ h6 {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
-  height: 33rem;
+  background-attachment: fixed
     
 }
 
