--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -1,141 +1,44 @@
-{{#if user.rol}}
-<nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
+{{#if user}}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">APPasionados</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
-            aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" href="/">
+            <img src="/img/logo4.png" alt="" width="60" height="60" class="d-inline-block ">
+        </a>
 
         <div class="collapse navbar-collapse" id="navbarsExample04">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
+                
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown"
-                        aria-expanded="false">Acciones</a>
+                        aria-expanded="false">Deportes</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown04">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="/paginas/futbol/:id">Fútbol</a></li>
+                        <li><a class="dropdown-item" href="#">Básquet</a></li>
+                        <li><a class="dropdown-item" href="#">Pádel</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/cerrarSesion" tabindex="-1" aria-disabled="true">Cerrar Sesion</a>
+                    <a class="nav-link" href="#">Canchas</a>
                 </li>
-            </ul>
-            <form>
-                <input class="form-control" type="text" placeholder="Buscar..." aria-label="Search">
-            </form>
-        </div>
-    </div>
-</nav>
-{{else}}
-    {{#if user}}
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/paginas/deporte">
-                    <img src="/img/logo4.png" alt="" width="60" height="60" class="d-inline-block ">
-                    <h2 style="display: inline-block" >APPasionados</h2>
-                </a>
-                <li class="nav-item">
-                    <a class="nav-link " href="#" tabindex="-1" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido {{user.nombreUsuario}}</a>
-                </li>
+                <form>
+                    <input class="form-control" type="text" placeholder="Buscar..." aria-label="Search">
+                </form>
                 
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-                    <div class="offcanvas-header">
-                        <ul id="nombrEmailBarra">
-                           <li><h4 id="offcanvasRightLabel">{{user.nombre}}</h4></li> 
-                           <li><i>{{user.email}}</i>
-                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                            </li>
-                        </ul>
-                                                          
-                    </div>
-                    <div class="offcanvas-body">
-                        <div class="container-fluid">
-                            <a class="nav-link active" aria-current="page">
-                                <div class="btn-group dropend">
-                                    <a  href="#" class="link link-secondary dropdown-toggle" type="link" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Perfil
-                                    </a>
-                                    <ul id="barraDesplegable" class="dropdown-menu" aria-labelledby="navbarDarkDropdownMenuLink">
-                                        <div class="container-md">
-                                            <li><span >Cuenta</span><h6>Jugador</h6></li>
-                                            <li><hr class="dropdown-divider"></li>
-                                            <a href="#" class="link link-success" type="link" data-bs-toggle="modal" data-bs-target="#exampleModal">Actualizar Nombre</a>
-                                        </div>
-                                    </ul>
-                                </div>
-                            </a>
-                            <a class="nav-link active" aria-current="page">
-                                <div class="btn-group dropend">
-                                    <a  href="#" class="link link-secondary dropdown-toggle" type="link" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Mis Equipos
-                                    </a>
-                                    <ul id="barraDesplegable" class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <div class="container-md">
-                                            <li>
-                                                Fútbol -
-                                                <a href="/paginas/equipo" class="link link-success" type="link">Equipo1</a>
-                                            </li>
-                                            <li><hr class="dropdown-divider"></li>
-                                            <li>
-                                                Básquet -
-                                                <a href="#" class="link link-success" type="link"></a>
-                                            </li>
-                                            <li><hr class="dropdown-divider"></li>
-                                            <li>
-                                                Pádel -
-                                                <a href="#" class="link link-success" type="link"></a>
-                                            </li>
-                                        </div>
-                                    </ul>
-                                </div>
-                            </a>
-                        </div>
-                        <br>
-                        <br>
-                        <div class="container-fluid">
-                            <a class="link link-primary " href="/paginas/deporte" tabindex="-1" aria-disabled="true">Elegir deporte</a>
-                        </div>
-                        <div class="container-fluid" style="margin-top: 70%" >
-                            <hr class="dropdown-divider">
-                            <a class="link link-danger " href="/cerrarSesion" tabindex="-1" aria-disabled="true">Cerrar sesión</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </nav>
-
-        <!-- Modal Actualizar Nombre-->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content bg-dark">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Actualizar nombre</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <form action="" method="POST">
-                            <b>Nombre actual</b>
-                            <input type="text" class="form-control" name="nombre" placeholder="Nombre usuario" autofocus>
-                            <b>Nuevo nombre</b>
-                            <input type="text" class="form-control" name="nombre nuevo" placeholder="Nuevo nombre usuario">  
-                        </form> 
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-                        <button type="button" class="btn btn-success">Actualizar</button>
-                    </div>
-                </div>
-            </div>
+            </ul>
+            
         </div>
 
-    {{/if}}
+        <li class="nav-item">
+            <a class="nav-link " href="#" tabindex="-1" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido {{user.nombreUsuario}}</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link-dark" href="/cerrarSesion" tabindex="-1" aria-disabled="true">Cerrar Sesion</a>
+        </li>
+    </div>
+    
+</nav>
+
 {{/if}}
