--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -9,8 +9,7 @@ body {
   background-attachment: fixed;
   height: 39rem;
   padding-bottom: 0%;
-  margin-bottom: 0%;
-  
+  margin-bottom: 0%  
 }
 
 #nombreEquipo {
