--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -1,3 +1,4 @@
+
 {{#if user.rol}}
 <nav class="navbar navbar-expand-md navbar-dark bg-dark" aria-label="Fourth navbar example">
     <div class="container-fluid">
@@ -44,8 +45,7 @@
                 </a>
                 <li class="nav-item">
                     <a class="nav-link " href="#" tabindex="-1" aria-disabled="true" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Bienvenido {{user.nombreUsuario}}</a>
-                </li>
-                
+                </li>                
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                     <div class="offcanvas-header">
                         <ul id="nombrEmailBarra">
@@ -79,10 +79,12 @@
                                     </a>
                                     <ul id="barraDesplegable" class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                         <div class="container-md">
+                                           
                                             <li>
                                                 Fútbol -
-                                                <a href="/paginas/equipo" class="link link-success" type="link">Equipo1</a>
+                                                <a href="/paginas/equipo" class="link link-success" type="link"></a>
                                             </li>
+                                        
                                             <li><hr class="dropdown-divider"></li>
                                             <li>
                                                 Básquet -
